sets and gets restaurant and cleaning, other minor changes

--- a/HotelPtyxiaki/HotelPtyxiaki/Views/PageCleaningService.xaml
+++ b/HotelPtyxiaki/HotelPtyxiaki/Views/PageCleaningService.xaml
@@ -18,7 +18,7 @@
                         <Grid x:Name="GridSpecificDateTimes"></Grid>
                     </ScrollView>
                 </StackLayout>
-            <Button Text="Submit"></Button>
+            <Button x:Name="BtnSubmit" Clicked="BtnSubmitClicked" Text="Submit"></Button>
             <Grid>
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="*"/>
