--- a/HotelPtyxiaki/HotelPtyxiaki/Views/HomePage.xaml
+++ b/HotelPtyxiaki/HotelPtyxiaki/Views/HomePage.xaml
@@ -4,47 +4,56 @@
              x:Class="HotelPtyxiaki.Views.HomePage">
     <ScrollView HeightRequest="3000">
         <StackLayout>
-            <Image WidthRequest="600" HeightRequest="200" Source="Assets/applogo.png" Aspect="AspectFill"> </Image>
-            <Label Text="Reception" FontSize="24" HorizontalOptions="Center"></Label>
-            <Image WidthRequest="600" HeightRequest="150" Source="Assets/rate_us.png" Aspect="AspectFill">
-                <Image.GestureRecognizers>
-                    <TapGestureRecognizer
-                Tapped="ReceptionImageClicked"
-                NumberOfTapsRequired="1" />
-                </Image.GestureRecognizers>
-            </Image>
-            <Label Text="Restaurant" FontSize="24" HorizontalOptions="Center"></Label>
-            <Image WidthRequest="600" HeightRequest="150" Source="Assets/restaurantbackground.png" Aspect="AspectFill">
-                <Image.GestureRecognizers>
-                    <TapGestureRecognizer
-                Tapped="RestaurantImageClicked"
-                NumberOfTapsRequired="1" />
-                </Image.GestureRecognizers>
-            </Image>
-            <Label Text="Cleaning" FontSize="24" HorizontalOptions="Center"></Label>
-            <Image WidthRequest="600" HeightRequest="150" Source="Assets/openclean.png" Aspect="AspectFill">
-                <Image.GestureRecognizers>
-                    <TapGestureRecognizer
-                Tapped="CleaningImageClicked"
-                NumberOfTapsRequired="1" />
-                </Image.GestureRecognizers>
-            </Image>
-            <Label Text="About" FontSize="24" HorizontalOptions="Center"></Label>
-            <Image WidthRequest="600" HeightRequest="150" Source="Assets/aboutnew.png" Aspect="AspectFill">
-                <Image.GestureRecognizers>
-                    <TapGestureRecognizer
-                Tapped="AboutImageClicked"
-                NumberOfTapsRequired="1" />
-                </Image.GestureRecognizers>
-            </Image>
-            <Label Text="Rate Us" FontSize="24" HorizontalOptions="Center"></Label>
-            <Image WidthRequest="600" HeightRequest="150" Source="Assets/about.png" Aspect="AspectFill">
-                <Image.GestureRecognizers>
-                    <TapGestureRecognizer
-                Tapped="RateImageClicked"
-                NumberOfTapsRequired="1" />
-                </Image.GestureRecognizers>
-            </Image>
+            <StackLayout Orientation="Vertical" HorizontalOptions="Center" VerticalOptions="CenterAndExpand">
+                <Image WidthRequest="600" HeightRequest="200" Source="Assets/applogo.png" Aspect="AspectFill"></Image>
+                <Label Text="Reception" FontSize="24" HorizontalOptions="Center"></Label>
+                <Image WidthRequest="600" HeightRequest="150" Source="Assets/rate_us.png" Aspect="AspectFill">
+                    <Image.GestureRecognizers>
+                        <TapGestureRecognizer Tapped="ReceptionImageClicked" NumberOfTapsRequired="1" />
+                    </Image.GestureRecognizers>
+                </Image>
+                <Label Text="Reception" FontSize="16" HorizontalOptions="Center" TextColor="Black"></Label>
+            </StackLayout>
+
+            <StackLayout Orientation="Vertical" HorizontalOptions="Center" VerticalOptions="CenterAndExpand">
+                <Label Text="Restaurant" FontSize="24" HorizontalOptions="Center"></Label>
+                <Image WidthRequest="600" HeightRequest="150" Source="Assets/restaurantbackground.png" Aspect="AspectFill">
+                    <Image.GestureRecognizers>
+                        <TapGestureRecognizer Tapped="RestaurantImageClicked" NumberOfTapsRequired="1" />
+                    </Image.GestureRecognizers>
+                </Image>
+                <Label Text="Restaurant Reservation" FontSize="16" HorizontalOptions="Center" TextColor="Black"></Label>
+            </StackLayout>
+
+            <StackLayout Orientation="Vertical" HorizontalOptions="Center" VerticalOptions="CenterAndExpand">
+                <Label Text="Cleaning" FontSize="24" HorizontalOptions="Center"></Label>
+                <Image WidthRequest="600" HeightRequest="150" Source="Assets/openclean.png" Aspect="AspectFill">
+                    <Image.GestureRecognizers>
+                        <TapGestureRecognizer Tapped="CleaningImageClicked" NumberOfTapsRequired="1" />
+                    </Image.GestureRecognizers>
+                </Image>
+                <Label Text="Cleaning Service" FontSize="16" HorizontalOptions="Center" TextColor="Black"></Label>
+            </StackLayout>
+
+            <StackLayout Orientation="Vertical" HorizontalOptions="Center" VerticalOptions="CenterAndExpand">
+                <Label Text="About" FontSize="24" HorizontalOptions="Center"></Label>
+                <Image WidthRequest="600" HeightRequest="150" Source="Assets/aboutnew.png" Aspect="AspectFill">
+                    <Image.GestureRecognizers>
+                        <TapGestureRecognizer Tapped="AboutImageClicked" NumberOfTapsRequired="1" />
+                    </Image.GestureRecognizers>
+                </Image>
+                <Label Text="About us" FontSize="16" HorizontalOptions="Center" TextColor="Black"></Label>
+            </StackLayout>
+
+            <StackLayout Orientation="Vertical" HorizontalOptions="Center" VerticalOptions="CenterAndExpand">
+                <Label Text="Rate Us" FontSize="24" HorizontalOptions="Center"></Label>
+                <Image WidthRequest="600" HeightRequest="150" Source="Assets/about.png" Aspect="AspectFill">
+                    <Image.GestureRecognizers>
+                        <TapGestureRecognizer Tapped="RateImageClicked" NumberOfTapsRequired="1" />
+                    </Image.GestureRecognizers>
+                </Image>
+                <Label Text="Rate our Services" FontSize="16" HorizontalOptions="Center" TextColor="Black"></Label>
+            </StackLayout>
         </StackLayout>
     </ScrollView>
 </ContentPage>
