fixed stuff like deleting cleaning datetime and proceeding from a page to another

--- a/HotelPtyxiaki/HotelPtyxiaki/Views/HomePage.xaml
+++ b/HotelPtyxiaki/HotelPtyxiaki/Views/HomePage.xaml
@@ -6,53 +6,48 @@
         <StackLayout>
             <StackLayout Orientation="Vertical" HorizontalOptions="Center" VerticalOptions="CenterAndExpand">
                 <Image WidthRequest="600" HeightRequest="200" Source="Assets/applogo.png" Aspect="AspectFill"></Image>
-                <Label Text="Reception" FontSize="24" HorizontalOptions="Center"></Label>
+                <Label Text="Reception" FontSize="24" HorizontalOptions="Center" TextColor="#ff6d98a6"></Label>
                 <Image WidthRequest="600" HeightRequest="150" Source="Assets/rate_us.png" Aspect="AspectFill">
                     <Image.GestureRecognizers>
                         <TapGestureRecognizer Tapped="ReceptionImageClicked" NumberOfTapsRequired="1" />
                     </Image.GestureRecognizers>
                 </Image>
-                <Label Text="Reception" FontSize="16" HorizontalOptions="Center" TextColor="Black"></Label>
             </StackLayout>
 
             <StackLayout Orientation="Vertical" HorizontalOptions="Center" VerticalOptions="CenterAndExpand">
-                <Label Text="Restaurant" FontSize="24" HorizontalOptions="Center"></Label>
+                <Label Text="Restaurant Reservation" FontSize="24" HorizontalOptions="Center" TextColor="#ff6d98a6"></Label>
                 <Image WidthRequest="600" HeightRequest="150" Source="Assets/restaurantbackground.png" Aspect="AspectFill">
                     <Image.GestureRecognizers>
                         <TapGestureRecognizer Tapped="RestaurantImageClicked" NumberOfTapsRequired="1" />
                     </Image.GestureRecognizers>
                 </Image>
-                <Label Text="Restaurant Reservation" FontSize="16" HorizontalOptions="Center" TextColor="Black"></Label>
             </StackLayout>
 
             <StackLayout Orientation="Vertical" HorizontalOptions="Center" VerticalOptions="CenterAndExpand">
-                <Label Text="Cleaning" FontSize="24" HorizontalOptions="Center"></Label>
+                <Label Text="Cleaning Service" FontSize="24" HorizontalOptions="Center" TextColor="#ff6d98a6"></Label>
                 <Image WidthRequest="600" HeightRequest="150" Source="Assets/openclean.png" Aspect="AspectFill">
                     <Image.GestureRecognizers>
                         <TapGestureRecognizer Tapped="CleaningImageClicked" NumberOfTapsRequired="1" />
                     </Image.GestureRecognizers>
                 </Image>
-                <Label Text="Cleaning Service" FontSize="16" HorizontalOptions="Center" TextColor="Black"></Label>
             </StackLayout>
 
             <StackLayout Orientation="Vertical" HorizontalOptions="Center" VerticalOptions="CenterAndExpand">
-                <Label Text="About" FontSize="24" HorizontalOptions="Center"></Label>
+                <Label Text="About our Hotel" FontSize="24" HorizontalOptions="Center" TextColor="#ff6d98a6"></Label>
                 <Image WidthRequest="600" HeightRequest="150" Source="Assets/aboutnew.png" Aspect="AspectFill">
                     <Image.GestureRecognizers>
                         <TapGestureRecognizer Tapped="AboutImageClicked" NumberOfTapsRequired="1" />
                     </Image.GestureRecognizers>
                 </Image>
-                <Label Text="About us" FontSize="16" HorizontalOptions="Center" TextColor="Black"></Label>
             </StackLayout>
 
             <StackLayout Orientation="Vertical" HorizontalOptions="Center" VerticalOptions="CenterAndExpand">
-                <Label Text="Rate Us" FontSize="24" HorizontalOptions="Center"></Label>
+                <Label Text="Rate us" FontSize="24" HorizontalOptions="Center" TextColor="#ff6d98a6"></Label>
                 <Image WidthRequest="600" HeightRequest="150" Source="Assets/about.png" Aspect="AspectFill">
                     <Image.GestureRecognizers>
                         <TapGestureRecognizer Tapped="RateImageClicked" NumberOfTapsRequired="1" />
                     </Image.GestureRecognizers>
                 </Image>
-                <Label Text="Rate our Services" FontSize="16" HorizontalOptions="Center" TextColor="Black"></Label>
             </StackLayout>
         </StackLayout>
     </ScrollView>
