--- a/HotelPtyxiaki/HotelPtyxiaki/Views/PageCleaningService.xaml
+++ b/HotelPtyxiaki/HotelPtyxiaki/Views/PageCleaningService.xaml
@@ -1,17 +1,17 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="HotelPtyxiaki.Views.PageCleaningService">
+             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" 
+             xmlns:local="clr-namespace:HotelPtyxiaki.Controls"
+             x:Class="HotelPtyxiaki.Views.PageCleaningService"
+             >
     <RelativeLayout Padding="0">
         <Image x:Name="ImgClean"  Aspect="AspectFill" Source="Assets/closedclean.png" RelativeLayout.WidthConstraint= "{ConstraintExpression Type=RelativeToParent, Property=Width}" RelativeLayout.HeightConstraint= "{ConstraintExpression Type=RelativeToParent, Property=Height}" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand" Margin="0,-10,0,0"></Image>
         <StackLayout RelativeLayout.WidthConstraint= "{ConstraintExpression Type=RelativeToParent, Property=Width}" RelativeLayout.HeightConstraint= "{ConstraintExpression Type=RelativeToParent, Property=Height}">
-                <Label Text="Do you need Cleaning Service?" FontSize="24" TextColor="Black" HorizontalOptions="Center" />
-                <!-- VerticalOptions="CenterAndExpand" 
-                HorizontalOptions="CenterAndExpand" /> -->
+            <Label Text="Daily Standard Housekeeping" FontSize="24" TextColor="Black" HorizontalOptions="Center" />
             <Switch x:Name="SwitchEnabled" HorizontalOptions="Center" IsVisible="True" Toggled="CheckImageClicked"  />
-            <Label x:Name="LblSpecificTime" Text="Specific Time" TextColor="Black" FontSize="24"/>
-            <Button Text="Add" Clicked="SpecificDateTimeClicked" />
-            <DatePicker x:Name ="datePicker" Margin="70" IsVisible="false"  Unfocused="SpecificDateSelected"/>
+            <Label x:Name="LblSpecificTime" Text="Requests for specific DateTimes:" TextColor="Black" FontSize="24"/>
+            <Button Text="Add Request" Clicked="SpecificDateTimeClicked" />
+            <local:OKCancelDatePicker x:Name ="datePicker" Margin="70" IsVisible="false"  Unfocused="SpecificDateSelected"/>
             <TimePicker x:Name="timePicker" Margin="80" IsVisible="false"   Unfocused="SpecificTimeSelected"/>
                 <StackLayout>
                     <ScrollView VerticalScrollBarVisibility="Default">
