--- a/HotelPtyxiaki/HotelPtyxiaki/Views/PageRestaurant.xaml
+++ b/HotelPtyxiaki/HotelPtyxiaki/Views/PageRestaurant.xaml
@@ -1,40 +1,19 @@
-﻿<?xml version="1.0" encoding="UTF-8"?>
-<ContentPage xmlns="http://xamarin.com/schemas/2014/forms" 
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="HotelPtyxiaki.Views.PageRestaurant">
+﻿<?xml version="1.0" encoding="utf-8" ?>
+<ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
+             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" 
+             x:Class="HotelPtyxiaki.Views.PageRestaurant"
+             >
     <RelativeLayout Padding="0">
         <Image x:Name="ImgRestaurantBackground" HorizontalOptions="Fill"  VerticalOptions="FillAndExpand" Aspect="AspectFill" Source="Assets/restaurantback.png" HeightRequest="870" Margin="-10,-15,0,-15" RelativeLayout.WidthConstraint="{ConstraintExpression Type=RelativeToParent, Property=Width}" RelativeLayout.HeightConstraint= "{ConstraintExpression Type=RelativeToParent, Property=Height}"></Image>
-        <StackLayout Padding="0" Margin="0,20,0,0" VerticalOptions="StartAndExpand" HorizontalOptions="Start" RelativeLayout.WidthConstraint="{ConstraintExpression Type=RelativeToParent, Property=Width}" RelativeLayout.HeightConstraint= "{ConstraintExpression Type=RelativeToParent, Property=Height}">
+        <StackLayout RelativeLayout.WidthConstraint= "{ConstraintExpression Type=RelativeToParent, Property=Width}" RelativeLayout.HeightConstraint= "{ConstraintExpression Type=RelativeToParent, Property=Height}">
             <Button x:Name="BtnCheckMenu" Margin="0,0,0,0" Text="Menu" VerticalOptions="Start" TextColor="White" FontSize="Body"  Clicked="BtnMenu_Click" />
-            <Label x:Name="LblPool" Text="If you want to reserve a table at our restaurant please select the number of guests, the date and time of your request and press Submit button" VerticalOptions="StartAndExpand" FontAttributes="Italic" TextColor="NavajoWhite" FontSize="16"></Label>
-            <StackLayout Orientation="Horizontal">
-           
-            <Label x:Name="LblPeople" Text="Table for: 1" VerticalOptions="StartAndExpand" FontAttributes="Bold" TextColor="NavajoWhite" FontSize="20"></Label>
-                <Stepper
-                    Value="1" 
-         Minimum="1" 
-         Maximum="8" 
-         Increment="1" 
-         HorizontalOptions="Center" 
-                    x:Name="StprPeople"
-         VerticalOptions="CenterAndExpand"
-         ValueChanged="OnValueChanged"/>
-            </StackLayout>
-
-            <DatePicker x:Name ="datePicker" Margin="70" IsVisible="false"  Unfocused="SpecificDateSelected"/>
-            <TimePicker x:Name="timePicker" Margin="80" IsVisible="false"   Unfocused="SpecificTimeSelected"/>
-            <StackLayout Orientation="Horizontal">
-                <Button Text="Date" Clicked="BtnDateClicked"  />
-                <Label x:Name="LblDate"  Text="Date: 1/1" TextColor="NavajoWhite" FontSize="20" />
-            </StackLayout>
-            <StackLayout Orientation="Horizontal">
-                <Button Text="Time" Clicked="BtnTimeClicked"></Button>
-                <Label  x:Name="LblTime" Text="Time: 00:00" TextColor="NavajoWhite" FontSize="20"/>
+            <Label x:Name="LblRequests" Text="Requests for Tables on the Restaurant:" TextColor="Black" FontSize="24"/>
+            <Button Text="Add Request" Clicked="BtnAddRequestClicked" />
+            <StackLayout>
+                <ScrollView VerticalScrollBarVisibility="Default">
+                    <Grid x:Name="GridRequests"></Grid>
+                </ScrollView>
             </StackLayout>
         </StackLayout>
-        <StackLayout Padding="0" Margin="0,0,0,0" VerticalOptions="End" HorizontalOptions="Fill" RelativeLayout.WidthConstraint="{ConstraintExpression Type=RelativeToParent, Property=Width}" RelativeLayout.HeightConstraint= "{ConstraintExpression Type=RelativeToParent, Property=Height}">
-            <Entry x:Name="EdComment" Margin="0,0,0,0" Placeholder="Enter Comment here" VerticalTextAlignment="Top" VerticalOptions="FillAndExpand" BackgroundColor="LightGray" HeightRequest="130"  MaxLength="40" />
-            <Button x:Name="BtnSubmit" Text="Submit" Clicked="BtnSubmitClicked" VerticalOptions="End" ></Button>
-        </StackLayout>
-    </RelativeLayout>
+        </RelativeLayout>
 </ContentPage>
