--- a/HotelPtyxiaki/HotelPtyxiaki/Views/HomePage.xaml
+++ b/HotelPtyxiaki/HotelPtyxiaki/Views/HomePage.xaml
@@ -4,65 +4,65 @@
              x:Class="HotelPtyxiaki.Views.HomePage">
     <ScrollView HeightRequest="3000">
         <StackLayout>
-            <Image WidthRequest="600" HeightRequest="200" Source="Assets/applogo.png" Aspect="AspectFill"></Image>
+            <Image HeightRequest="170" Source="Assets/applogo.png" Aspect="AspectFill"></Image>
 
             <!-- Reception Card View -->
-            <Frame Margin="5" Padding="5" CornerRadius="5" BackgroundColor="White">
+            <Frame Margin="5" Padding="5" CornerRadius="10" HasShadow="True" BackgroundColor="#ff6d98a6">
                 <StackLayout Orientation="Horizontal" VerticalOptions="Center">
                     <StackLayout.GestureRecognizers>
                         <TapGestureRecognizer Tapped="ReceptionImageClicked" NumberOfTapsRequired="1" />
                     </StackLayout.GestureRecognizers>
 
                     <Image WidthRequest="100" HeightRequest="100" Source="Assets/receptionbackground.png" Aspect="AspectFill" HorizontalOptions="StartAndExpand" />
-                    <Label Text="Reception" FontSize="20" VerticalOptions="CenterAndExpand" TextColor="#ff6d98a6" HorizontalOptions="StartAndExpand" />
+                    <Label Text="Reception" FontSize="20" VerticalOptions="CenterAndExpand" TextColor="White" HorizontalOptions="StartAndExpand" />
                 </StackLayout>
             </Frame>
 
             <!-- Restaurant Reservation Card View -->
-            <Frame Margin="5" Padding="5" CornerRadius="5" BackgroundColor="White">
+            <Frame Margin="5" Padding="5" CornerRadius="10" HasShadow="True" BackgroundColor="#ff6d98a6">
                 <StackLayout Orientation="Horizontal" VerticalOptions="Center">
                     <StackLayout.GestureRecognizers>
                         <TapGestureRecognizer Tapped="RestaurantImageClicked" NumberOfTapsRequired="1" />
                     </StackLayout.GestureRecognizers>
 
                     <Image WidthRequest="100" HeightRequest="100" Source="Assets/restaurantbackground.png" Aspect="AspectFill" HorizontalOptions="StartAndExpand" />
-                    <Label Text="Restaurant Reservation" FontSize="20" VerticalOptions="CenterAndExpand" TextColor="#ff6d98a6" HorizontalOptions="StartAndExpand" />
+                    <Label Text="Restaurant Reservation" FontSize="20" VerticalOptions="CenterAndExpand" TextColor="White" HorizontalOptions="StartAndExpand" />
                 </StackLayout>
             </Frame>
 
             <!-- Cleaning Service Card View -->
-            <Frame Margin="5" Padding="5" CornerRadius="5" BackgroundColor="White">
+            <Frame Margin="5" Padding="5" CornerRadius="10" HasShadow="True" BackgroundColor="#ff6d98a6">
                 <StackLayout Orientation="Horizontal" VerticalOptions="Center">
                     <StackLayout.GestureRecognizers>
                         <TapGestureRecognizer Tapped="CleaningImageClicked" NumberOfTapsRequired="1" />
                     </StackLayout.GestureRecognizers>
 
                     <Image WidthRequest="100" HeightRequest="100" Source="Assets/openclean.png" Aspect="AspectFill" HorizontalOptions="StartAndExpand" />
-                    <Label Text="Cleaning Service" FontSize="20" VerticalOptions="CenterAndExpand" TextColor="#ff6d98a6" HorizontalOptions="StartAndExpand" />
+                    <Label Text="Cleaning Service" FontSize="20" VerticalOptions="CenterAndExpand" TextColor="White" HorizontalOptions="StartAndExpand" />
                 </StackLayout>
             </Frame>
 
             <!-- About our Hotel Card View -->
-            <Frame Margin="5" Padding="5" CornerRadius="5" BackgroundColor="White">
+            <Frame Margin="5" Padding="5" CornerRadius="10" HasShadow="True" BackgroundColor="#ff6d98a6">
                 <StackLayout Orientation="Horizontal" VerticalOptions="Center">
                     <StackLayout.GestureRecognizers>
                         <TapGestureRecognizer Tapped="AboutImageClicked" NumberOfTapsRequired="1" />
                     </StackLayout.GestureRecognizers>
 
                     <Image WidthRequest="100" HeightRequest="100" Source="Assets/aboutnew.png" Aspect="AspectFill" HorizontalOptions="StartAndExpand" />
-                    <Label Text="About our Hotel" FontSize="20" VerticalOptions="CenterAndExpand" TextColor="#ff6d98a6" HorizontalOptions="StartAndExpand" />
+                    <Label Text="About our Hotel" FontSize="20" VerticalOptions="CenterAndExpand" TextColor="White" HorizontalOptions="StartAndExpand" />
                 </StackLayout>
             </Frame>
 
             <!-- Rate us Card View -->
-            <Frame Margin="5" Padding="5" CornerRadius="5" BackgroundColor="White">
+            <Frame Margin="5" Padding="5" CornerRadius="10" HasShadow="True" BackgroundColor="#ff6d98a6">
                 <StackLayout Orientation="Horizontal" VerticalOptions="Center">
                     <StackLayout.GestureRecognizers>
                         <TapGestureRecognizer Tapped="RateImageClicked" NumberOfTapsRequired="1" />
                     </StackLayout.GestureRecognizers>
 
                     <Image WidthRequest="100" HeightRequest="100" Source="Assets/about.png" Aspect="AspectFill" HorizontalOptions="StartAndExpand" />
-                    <Label Text="Rate us" FontSize="20" VerticalOptions="CenterAndExpand" TextColor="#ff6d98a6" HorizontalOptions="StartAndExpand" />
+                    <Label Text="Rate us" FontSize="20" VerticalOptions="CenterAndExpand" TextColor="White" HorizontalOptions="StartAndExpand" />
                 </StackLayout>
             </Frame>
         </StackLayout>
