--- a/HotelPtyxiaki/HotelPtyxiaki/Views/HomePage.xaml
+++ b/HotelPtyxiaki/HotelPtyxiaki/Views/HomePage.xaml
@@ -3,66 +3,71 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="HotelPtyxiaki.Views.HomePage">
     <ScrollView HeightRequest="3000">
-        <StackLayout>
+        <StackLayout BackgroundColor="#fff0f5ff">
             <Image HeightRequest="170" Source="Assets/applogo.png" Aspect="AspectFill"></Image>
 
             <!-- Reception Card View -->
-            <Frame Margin="5" Padding="5" CornerRadius="10" HasShadow="True" BackgroundColor="#ff6d98a6">
-                <StackLayout Orientation="Horizontal" VerticalOptions="Center">
+            <Frame Margin="5" Padding="5" CornerRadius="10" HasShadow="True" BackgroundColor="#ffb5dcf0">
+                <StackLayout Orientation="Vertical" VerticalOptions="Center">
                     <StackLayout.GestureRecognizers>
                         <TapGestureRecognizer Tapped="ReceptionImageClicked" NumberOfTapsRequired="1" />
                     </StackLayout.GestureRecognizers>
 
-                    <Image WidthRequest="100" HeightRequest="100" Source="Assets/receptionbackground.png" Aspect="AspectFill" HorizontalOptions="StartAndExpand" />
-                    <Label Text="Reception" FontSize="20" VerticalOptions="CenterAndExpand" TextColor="White" HorizontalOptions="StartAndExpand" />
+                    <Image WidthRequest="150" HeightRequest="100" Source="Assets/receptionbackground.png" Aspect="AspectFill" HorizontalOptions="CenterAndExpand" />
+                    <Label Text="Reception" FontSize="20" VerticalOptions="CenterAndExpand" TextColor="#ff151515" HorizontalOptions="CenterAndExpand" />
+                    <Label Text="Hotel's data and Recception's telephone number" FontSize="12" VerticalOptions="CenterAndExpand" TextColor="#ff333333" HorizontalOptions="CenterAndExpand" />
                 </StackLayout>
             </Frame>
 
             <!-- Restaurant Reservation Card View -->
-            <Frame Margin="5" Padding="5" CornerRadius="10" HasShadow="True" BackgroundColor="#ff6d98a6">
-                <StackLayout Orientation="Horizontal" VerticalOptions="Center">
+            <Frame Margin="5" Padding="5" CornerRadius="10" HasShadow="True" BackgroundColor="#ffb5dcf0">
+                <StackLayout Orientation="Vertical" VerticalOptions="Center">
                     <StackLayout.GestureRecognizers>
                         <TapGestureRecognizer Tapped="RestaurantImageClicked" NumberOfTapsRequired="1" />
                     </StackLayout.GestureRecognizers>
 
-                    <Image WidthRequest="100" HeightRequest="100" Source="Assets/restaurantbackground.png" Aspect="AspectFill" HorizontalOptions="StartAndExpand" />
-                    <Label Text="Restaurant Reservation" FontSize="20" VerticalOptions="CenterAndExpand" TextColor="White" HorizontalOptions="StartAndExpand" />
+                    <Image WidthRequest="150" HeightRequest="100" Source="Assets/restaurantbackground.png" Aspect="AspectFill" HorizontalOptions="CenterAndExpand" />
+                    <Label Text="Restaurant Reservation" FontSize="20" VerticalOptions="CenterAndExpand" TextColor="#ff151515" HorizontalOptions="CenterAndExpand" />
+                    <Label Text="Manage Requests for table Reservations at the Restaurant" FontSize="12" VerticalOptions="CenterAndExpand" TextColor="#ff333333" HorizontalOptions="CenterAndExpand" />
                 </StackLayout>
             </Frame>
 
             <!-- Cleaning Service Card View -->
-            <Frame Margin="5" Padding="5" CornerRadius="10" HasShadow="True" BackgroundColor="#ff6d98a6">
-                <StackLayout Orientation="Horizontal" VerticalOptions="Center">
+            <Frame Margin="5" Padding="5" CornerRadius="10" HasShadow="True" BackgroundColor="#ffb5dcf0">
+                <StackLayout Orientation="Vertical" VerticalOptions="Center">
                     <StackLayout.GestureRecognizers>
                         <TapGestureRecognizer Tapped="CleaningImageClicked" NumberOfTapsRequired="1" />
                     </StackLayout.GestureRecognizers>
 
-                    <Image WidthRequest="100" HeightRequest="100" Source="Assets/openclean.png" Aspect="AspectFill" HorizontalOptions="StartAndExpand" />
-                    <Label Text="Cleaning Service" FontSize="20" VerticalOptions="CenterAndExpand" TextColor="White" HorizontalOptions="StartAndExpand" />
+                    <Image WidthRequest="150" HeightRequest="100" Source="Assets/openclean.png" Aspect="AspectFill" HorizontalOptions="CenterAndExpand" />
+                    <Label Text="Cleaning Service" FontSize="20" VerticalOptions="CenterAndExpand" TextColor="#ff151515" HorizontalOptions="CenterAndExpand" />
+                    <Label Text="Manage Housekeeping and requests for cleaning specific datetimes" FontSize="12" VerticalOptions="CenterAndExpand" TextColor="#ff333333" HorizontalOptions="CenterAndExpand" />
                 </StackLayout>
             </Frame>
 
             <!-- About our Hotel Card View -->
-            <Frame Margin="5" Padding="5" CornerRadius="10" HasShadow="True" BackgroundColor="#ff6d98a6">
-                <StackLayout Orientation="Horizontal" VerticalOptions="Center">
+            <Frame Margin="5" Padding="5" CornerRadius="10" HasShadow="True" BackgroundColor="#ffb5dcf0">
+                <StackLayout Orientation="Vertical" VerticalOptions="Center">
                     <StackLayout.GestureRecognizers>
                         <TapGestureRecognizer Tapped="AboutImageClicked" NumberOfTapsRequired="1" />
                     </StackLayout.GestureRecognizers>
 
-                    <Image WidthRequest="100" HeightRequest="100" Source="Assets/aboutnew.png" Aspect="AspectFill" HorizontalOptions="StartAndExpand" />
-                    <Label Text="About our Hotel" FontSize="20" VerticalOptions="CenterAndExpand" TextColor="White" HorizontalOptions="StartAndExpand" />
+                    <Image WidthRequest="150" HeightRequest="100" Source="Assets/aboutnew.png" Aspect="AspectFill" HorizontalOptions="CenterAndExpand" />
+                    <Label Text="About our Hotel" FontSize="20" VerticalOptions="CenterAndExpand" TextColor="#ff151515" HorizontalOptions="CenterAndExpand" />
+                    <Label Text="Information about us " FontSize="12" VerticalOptions="CenterAndExpand" TextColor="#ff333333" HorizontalOptions="CenterAndExpand" />
                 </StackLayout>
             </Frame>
 
             <!-- Rate us Card View -->
-            <Frame Margin="5" Padding="5" CornerRadius="10" HasShadow="True" BackgroundColor="#ff6d98a6">
-                <StackLayout Orientation="Horizontal" VerticalOptions="Center">
+            <Frame Margin="5" Padding="5" CornerRadius="10" HasShadow="True" BackgroundColor="#ffb5dcf0">
+                <StackLayout Orientation="Vertical" VerticalOptions="Center">
                     <StackLayout.GestureRecognizers>
                         <TapGestureRecognizer Tapped="RateImageClicked" NumberOfTapsRequired="1" />
                     </StackLayout.GestureRecognizers>
 
-                    <Image WidthRequest="100" HeightRequest="100" Source="Assets/about.png" Aspect="AspectFill" HorizontalOptions="StartAndExpand" />
-                    <Label Text="Rate us" FontSize="20" VerticalOptions="CenterAndExpand" TextColor="White" HorizontalOptions="StartAndExpand" />
+                    <Image WidthRequest="150" HeightRequest="100" Source="Assets/about.png" Aspect="AspectFill" HorizontalOptions="CenterAndExpand" />
+                    <Label Text="Rate us" FontSize="20" VerticalOptions="CenterAndExpand" TextColor="#ff151515" HorizontalOptions="CenterAndExpand" />
+                    <Label Text="Your opinion helps us!" FontSize="12" VerticalOptions="CenterAndExpand" TextColor="#ff333333" HorizontalOptions="CenterAndExpand" />
                 </StackLayout>
             </Frame>
         </StackLayout>
